# cpp-system-monitor

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake_build/: CMakeLists.txt
src/: linux_parser.cpp
